# EgretServer

./: .gitignore  CMakeLists.txt  build.sh  rebuild.sh
Gateway/: CMakeLists.txt  build.sh
Gateway/common/: CMakeLists.txt  InterServerComm.h
Gateway/common/common/: system_param_def.h
Gateway/common/db/: actor_db_data.h  guild_data.h  role_data.h
Gateway/common/gate/: gate_manager.cc  gate_manager.h  gate_proto.h  gate_session.h
Gateway/common/thread/: async_worker.cc
Gateway/common/utils/: watch_thread.cc
Gateway/gateway/: CMakeLists.txt  StdAfx.h  gate_def.h  gate_server.h  main.cc
Gateway/gateway/client/: client.cc  client.h
Gateway/gateway/event/: epoll_event.cc
Gateway/gateway/gameworld/: game_world_client.cc
Gateway/gateway/srv/: game_client_mgr.cc  game_client_mgr.h  socket_srv.cc  socket_srv.h
Gateway/libs/: common.lib
Gateway/srvlib/: CMakeLists.txt
Gateway/srvlib/include/: second_time.h  server_def.h  share_util.h
Gateway/srvlib/src/: second_time.cc  share_util.cc
LocalLogServer/: CMakeLists.txt  LocalLogClientSocket.cpp  LocalLogClientSocket.h  LocalLogServerSocket.cpp  SrvConfig.cpp  build.sh
sdk/commonLib/: CMakeLists.txt
sdk/commonLib/cpp/: CustomGateManager.cpp  CustomJXClientSocket.cpp  CustomJXServerClientSocket.cpp  CustomServerClientSocketEx.cpp  CustomServerGate.cpp  CustomSessionClient.cpp  HandleStat.cpp  JXAbsGameMap.cpp  LogSender.cpp  NetworkDataHandler.cpp
sdk/commonLib/def/: AchieveData.h  ActivityDb.h  ActorCacheDef.h  ActorDbData.h  ActorOfflineMsg.h  BossData.h  CommonDef.h  DBProto.h  FeeDb.h  Fuben.h  GameSets.h  GhostDef.h  GuildDb.h  HallowsDef.h  HeroData.h  InterAction.h  InterServerComm.h  Msg.h  PetData.h  QuestData.h  ServerDef.h  ServerMailDef.h  SkillDbData.h  UserItem.h
sdk/commonLib/include/: CustomGateManager.h  CustomGlobalSession.h  CustomJXClientSocket.h  CustomJXServerClientSocket.h  CustomServerClientSocketEx.h  CustomServerGate.h  CustomServerGateUser.h  CustomSessionClient.h  GateProto.h  HandleMgr.h  HandleStat.h  JXAbsGameMap.h  LogSender.h  LogType.h  LuaSocket.hpp  NetworkDataHandler.h  mjProto.h
sdk/srvlib/: CMakeLists.txt  build.sh
sdk/srvlib/include/: AMClient.h  AdvanceAstar.h  AnsiString.hpp  AppItnMsg.h  AtomOPDef.h  CBPTypes.h  CFilter.h  CLVariant.h  ClassedWnd.h  CustomClientSocket.h  CustomHashTable.h  CustomLuaClass.h  CustomLuaConfig.h  CustomLuaMyLoad.h  CustomLuaPreProcess.h  CustomLuaProfiler.h  CustomLuaScript.h  CustomServerClientSocket.h  CustomServerSocket.h  CustomSortList.h  CustomWorkSocket.h  DataPacket.hpp  DataPacketReader.hpp  DefExceptHander.h  FDOP.h  FileDB_test.h  FvMask.h  LangTextSection.h  LinkedList.h  List.h  LockList.h  LuaCLVariant.h  LuaLangTextSection.h  LuaToBP.h  LuaVariantClass.h  MBCSDef.h  NPComm.h  NameAllocator.h  NamedPipe.h  ObjectAllocStat.hpp  (+22 more)
sdk/srvlib/src/: AdvanceAstar.cpp  CustomClientSocket.cpp  CustomLuaConfig.cpp  CustomLuaMyLoad.cpp  CustomLuaPreProcess.cpp  CustomLuaProfiler.cpp  CustomLuaScript.cpp  CustomServerClientSocket.cpp  CustomServerSocket.cpp  CustomWorkSocket.cpp  DefExceptHander.cpp  FDOP.cpp  FileDB_test.cpp  Filter.cpp  LangTextSection.cpp  LuaCLVariant.cpp  LuaLangTextSection.cpp  LuaToBP.cpp  LuaVariantClass.cpp  NameAllocator.cpp  SendPackPool.cpp  SingleObjectAllocator.cpp  StackWalker.cpp  TimeStat.cpp  utf8_output.c
sdk/tolua++/srcexe/: CMakeLists.txt  Findliblua-5.1_r.cmake  tolua.c
server/LogicServer/: AsyncWorker.cpp  CMakeLists.txt  ChangeLogicServerVersion.bat  LogicEngine.cpp  StdAfx.cpp  build.sh  update.bat
server/LogicServer/Cross/: CrossActorMgr.cpp  CrossActorMgr.h
server/LogicServer/CrossServer/: CrossDataHandle.cpp  CrossServer.cpp  CrossServer.h  CrossServerManager.cpp  CrossServerManager.h
server/LogicServer/Crossclient/: LocalCrossClient.cpp  LocalCrossClient.h
server/LogicServer/Locallog/: LocalSender.h
server/LogicServer/ai/: AIMgr.cpp  AggressorAI.cpp  AnimalAI.cpp  BaseAI.cpp  BaseAI.h  BattleHate.cpp  BattleHate.h  HeroAI.h  NPCAI.h  PassiveAI.h  RandomFleeAI.h  SpecialAI.cpp  SpecialAI.h  TalkAI.cpp  WalkRideAi.h
server/LogicServer/attr/: AttrCalc.cpp  AttrCalc.h  AttrDef.h  RandAttrSelector.cpp  RandAttrSelector.h
server/LogicServer/base/: AchieveMrg.cpp  ActivityManager.cpp  ActorDataPacketStatAlloc.cpp  BackResLoadModule.h  BaseScriptExportObject.cpp  BoxDrop.h  BuffAllocStatHelper.h  Component.h  ConsignmentMgr.cpp  CustomLogicLuaConfig.cpp  CustomLogicLuaConfig.h  EncryptFunctionName.h  EntityAttriFlag.h  EntityManager.h  GlobalVarMgr.cpp  Guild.cpp  HandleList.h  LogicLuaAllocator.cpp  LogicLuaAllocator.h  MessageFilter.h  NoticeManager.cpp  NoticeManager.h  OfflineUserMgr.cpp  Ranking.cpp  Ranking.h  RankingMgr.cpp  RankingMgr.h  ScriptNetmsgDispatcher.h  StringBuff.hpp  TimerMgr.h  TopTitleMgr.cpp  TopTitleMgr.h  WorldLevelMgr.cpp  WorldLevelMgr.h
server/LogicServer/buff/: BuffSystem.h  DynamicBuff.h
server/LogicServer/commonserver/: CommonServer.h  CommonServerClient.cpp
server/LogicServer/config/: AchieveCfg.cpp  AchieveProvider.cpp  AchieveProvider.h  ActivityProvider.cpp  ActivityProvider.h  AiConfig.h  AiProvider.cpp  BagConfig.h  BlessCfg.h  BuffProvider.h  CLogicDataProvider.cpp  CombatProvider.h  ConfigData.h  ConsignmentProvider.cpp  ConsignmentProvider.h  DropGroupCfg.cpp  DropGroupCfg.h  EditionProvider.cpp  EditionProvider.h  EnvirConfig.cpp  EnvirConfig.h  FashionCfg.cpp  FashionCfg.h  FileReader.h  FlyShoesConfig.h  FriendProvider.h  GuildProvider.h  HallowsConfig.cpp  HallowsConfig.h  LoadTerm.cpp  LogicDataProvider.h  LootPetProvider.cpp  LootPetProvider.h  LuaConfigBase.cpp  LuaConfigBase.h  MiscProvider.cpp  MonsterConfig.cpp  MonsterConfig.h  MonsterProvider.cpp  MonsterProvider.h  (+21 more)
server/LogicServer/db/: DataClient.cpp  DataClient.h
server/LogicServer/entity/: Actor.h  ActorBase.cpp  ActorNetCut.cpp  Animal.cpp  Animal.h  Creature.h  DropItemEntity.h  Entity.cpp  Entity.h  Fire.cpp  Hero.h  Monster.cpp  MovingNpc.cpp  MovingNpc.h  Pet.cpp  Pet.h  Transfer.cpp
server/LogicServer/entitysystem/: AchieveSystem.cpp  AchieveSystem.h  (+47 more)
(+709 files in other folders)
